style.css
body {
    position: absolute;
    height: 100vh;
    width: 100vw;
    margin: 0;
    background-color: #3a3939;
}

#main {
    width: 40%;
    min-width: 620px;
    margin: 10% auto 0 auto;
    height: 60%;
    background-color: #575757;
}

#display {
    width: 100%;
    min-height: 70px;
    height: 20%;
    margin: 0;
    text-align: right;
    font-size: 10vh;
    color: white;
}

#buttonsDiv {
    height: 80%;;
    margin: 0;
}

.column {
    float: left;
    width: 20%;
    height: 100%;
}

button {
    width: 100%;
    height: 25%;
    min-height: 20px;
    background-color: #e27e62;
    font-size: x-large;
    box-sizing: border-box;
    border: none;
    transition: .1s
}

.operand {
    background-color: #62c7e2;
}

.operand:hover {
    background-color:rgb(84, 150, 212);
}

button:hover {
    background-color: #a1482b
}

#equals {
    height: 50%;
}

